--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Mukta:wght@500&family=Nunito:wght@500&family=Roboto&family=Roboto+Slab:wght@500&family=Source+Sans+Pro&display=swap");
+    </style>
+    <style>
+      * {
+        font-family: "Mukta", sans-serif;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
